# PrepForge

./: .gitignore  DOCKER_SETUP.md  PROJECT_EXPLANATION.md  README.md  RUN_LOCAL_COMMANDS.txt  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  test_stream.py
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 20260714_0001_initial_schema.py  40113aaa234e_add_new_fields_to_user_model.py  4a7eba7c8e2c_add_username_field.py
apps/api/src/placement_api/: __init__.py  main.py
apps/api/src/placement_api/api/: deps.py
apps/api/src/placement_api/api/v1/: router.py
apps/api/src/placement_api/api/v1/routes/: admin.py  auth.py  chat.py  documents.py  health.py  planner.py  profile.py  resume.py  search.py
apps/api/src/placement_api/core/: config.py  errors.py  logging.py  middleware.py  qdrant.py  security.py
apps/api/src/placement_api/db/: base.py  enums.py  models.py  session.py
apps/api/src/placement_api/models/: __init__.py  company.py  conversation.py  document.py  mock_interview.py  resume.py  study_plan.py  user.py
apps/api/src/placement_api/schemas/: auth.py  document.py  planner.py  resume.py  search.py  user.py
apps/api/src/placement_api/services/: chat.py  document.py  embedding.py  planner.py  resume.py  search.py  user.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts
docs/api/: API_DESIGN.md
docs/architecture/: ARCHITECTURE.md
docs/database/: DATABASE_DESIGN.md
docs/deployment/: DEPLOYMENT_GUIDE.md
(+12 files in other folders)
