[project]
name = "placement-assistant-api"
version = "0.1.0"
description = "FastAPI backend for the AI Placement Assistant."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "pwdlib[argon2]>=0.2.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.9",
  "PyJWT>=2.8.0",
  "python-json-logger>=2.0.7",
  "qdrant-client>=1.7.0",
  "fastembed>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-groq>=0.1.0",
  "langgraph>=0.1.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "pymupdf>=1.24.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests/backend"]
